# Training-repo

./: README.md
Ethereum/subhajit/order-calculator/: package-lock.json  package.json
Ethereum_samir/: Calculate_Order.sol  note_taking.sol
EtheriumProjects/Secure-VotingSystem/: voting_system.sol
EtheriumProjects/Secure-VotingSystem/artifacts/: SecureVotingSystem.json  SecureVotingSystem_metadata.json  SecureVotingSystem_metadata.json:Zone.Identifier  StorageVsMemory_metadata.json
EtheriumProjects/storagevsmemory/: memeoryvsstorage.sol
EtheriumProjects/storagevsmemory/artifacts/: StorageVsMemory.json
EtheriumProjects/token-itemcart/: hardhat.config.js  package-lock.json  package.json
ICP_samir/ToDo-List/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
ICP_samir/ToDo-List/src/temp_backend/: Cargo.toml  temp_backend.did
ICP_samir/ToDo-List/src/temp_backend/src/: lib.rs
ICP_samir/icp_counter/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
ICPprojects/Counter_dapp/: Cargo.toml  README.md  dfx.json  folder_structure.txt  package-lock.json  package.json
ICPprojects/Todo_Dapp/: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
ICPprojects/rust-based-token-wallet-using-ipc/: README.md  package-lock.json  package.json
ICPprojects/rust-based-token-wallet-using-ipc/src/token_wallet_backend/: Cargo.toml
ICPprojects/rust-based-token-wallet-using-ipc/src/token_wallet_backend/src/: lib.rs  wallet_tests.rs
SolanaProjects/prasheels_projects_solana/: README.md
SolanaProjects/token-project/: Anchor.toml
(+161 files in other folders)
